# OrderPulse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  fastreader_test.ipynb  pyproject.toml  test.ipynb  test_streaming.py
.cargo/: config.toml
.github/workflows/: release.yml
python/fastreader/: __init__.py  __init__.pyi
python_project/: debug_feedpath.py  inspect_nb.py  pypi.py  runner.py  smoke_test_fastreader.py  text.py
src/: contStruct.rs  lib.rs  main.rs  orderbook.rs  orderbook_processing.rs  read_trd_ord_only.rs  structure.rs  tsc.rs
