[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "OrderPulse"
version = "0.2.52"
requires-python = ">=3.9"
description = "High-performance exchange feed parser and orderflow analytics engine with Rust and Python bindings"
readme = { file = "README.md", content-type = "text/markdown" } 
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Rust",
	"License :: Other/Proprietary License",
	"Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/RmoneyQuant/OrderPulse"
Repository = "https://github.com/RmoneyQuant/OrderPulse"
Source = "https://github.com/RmoneyQuant/OrderPulse"
Documentation = "https://github.com/RmoneyQuant/OrderPulse#readme"



[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "fastreader.fastreader"


